--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,137 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* shared styles */
+
+.display-flex{
+    display: flex;
+}
+
+/* dark-02 */
+.text-gray{
+    color: #424242;
+}
+/* dark-03 */
+.text-light-gray{
+    color: #727272;
+}
+.text-primary{
+    color: #FF900E;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    border-radius: 8px;
+    border: none;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main> section {
+    margin-top: 130px;
+}
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+/* header styles */
+
+/* navbar related styles */
+.navbar {
+    justify-content: space-between;
+    align-items: center;
+}
+.brand {
+    font-weight: 700;
+    font-size: 3rem;
+}
+.nav-itme{
+    list-style: none;
+    margin-right: 50px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    color: ;
+}
+.navbar, .banner {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/* banner related styles */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-image{
+    width: 100%;
+}
+
+/* team and features styles */
+.team{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+#quick-list{
+    font-weight: 500;
+}
+
+
+/* media responsive query */
+@media screen and (max-width: 576px) {
+    .navbar, 
+    .nav-link,
+    .teams{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+        /* justify-content: center;
+        align-items: center; */
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+
+
+/* medium-sized devices */
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    
+        .teams {
+            flex-direction: column;
+        }
+        .our-features{
+            margin-left: 50px auto;
+        }
+    }
