--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,39 @@ main> section {
     font-weight: 500;
 }
 
+/* some fact related styles */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+    justify-content: space-between;
+}
+
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-description{
+     max-width: 540px;
+}
+
+
 
 /* media responsive query */
 @media screen and (max-width: 576px) {
