--- a/styles/style.css
+++ b/styles/style.css
@@ -141,6 +141,21 @@ main> section {
      max-width: 540px;
 }
 
+  /* sponsorr related styles */
+  .sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
 
 
 /* media responsive query */
@@ -153,10 +168,17 @@ main> section {
         align-items: center;
     }
 
-    .team-img-container{
+    .team-img-container, 
+    .facts-container,
+    .sponsor-companies
+    {
         grid-template-columns: repeat(1, 1fr);
         /* justify-content: center;
         align-items: center; */
+    }
+    .facts-container, .sponsor-companies{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
         margin-left: 20px;
@@ -168,10 +190,19 @@ main> section {
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
     
-        .teams {
+        .teams, .facts-container, .sponsor-companies {
+            grid-template-columns: repeat(2, 1fr);
             flex-direction: column;
+            gap: 24px;
+            justify-items: center;
         }
         .our-features{
             margin-left: 50px auto;
         }
+        .fact-text {
+            flex-direction: column;
+            justify-content: center;
+        }
     }
+
+  
