--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,45 @@ main> section {
     font-weight: 500;
 }
 
+/* features section related styles */
+
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 21px;
+}
+
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -92px;
+    margin-top: -150px;
+}
+#experience-year{
+    font-size: 4.06rem;
+    font-weight: 700;
+}
+.featured-architect{
+    width: 100%;
+}
+
+
 /* some fact related styles */
 .facts-container{
     display: grid;
@@ -162,6 +201,7 @@ main> section {
 @media screen and (max-width: 576px) {
     .navbar, 
     .nav-link,
+    .features,
     .teams{
         flex-direction: column;
         justify-content: center;
@@ -183,6 +223,10 @@ main> section {
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 
 
@@ -190,7 +234,11 @@ main> section {
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
     
-        .teams, .facts-container, .sponsor-companies {
+        .teams, 
+        .facts-container, 
+        .sponsor-companies,
+        .features
+         {
             grid-template-columns: repeat(2, 1fr);
             flex-direction: column;
             gap: 24px;
@@ -203,6 +251,11 @@ main> section {
             flex-direction: column;
             justify-content: center;
         }
+        #experience-badge{
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+        
     }
 
   
